# goit-pythonweb-hw-10

./: .env.example  .gitignore copy  Dockerfile  README copy.md  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_connection.py  test_db_connection.py
alembic/: env.py
alembic/versions/: 1fc29e96094d_initial_migration.py
postgres-data/base/1/: 2675  3609
postgres-data/base/13480/: 1255  2658  2691  3455
postgres-data/base/13481/: 2659  2662  2673  2674  2838  3085  3164
postgres-data/base/16384/: 2618  2619  2663
postgres-data/global/: 1260  1262  2671  2676  pg_control
postgres-data/pg_stat_tmp/: global.stat
src/api/: contacts.py  utils.py
src/conf/: config.py
src/core/: email_token.py
src/database/: models.py
src/entity/: models.py
src/repository/: contacts.py
src/schemas/: token.py  user.py
src/services/: auth.py  contacts.py  upload_file_service.py  user.py
